examples/test/testpolicy2344.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2344
  namespace: namespace224
spec:
  podSelector:
    matchLabels:
      key36: value40
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key12: value7
      podSelector:
        matchLabels:
          key39: value21
          key5: value29
          key45: value9
